FAM-03 create layout in header

--- a/pages/default-modules/header.html
+++ b/pages/default-modules/header.html
@@ -1,13 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Header</h1>
-    <a href="home.html">Home</a>
-    <a href="contact.html">Contact</a>
-</body>
-</html>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-4">
+            <div class="header__left" >
+                <div class="header__hotline">
+                    <div class="hotline__icon">
+                        <img src="../../assets/images/phone-border.png" alt="hotline">
+                    </div>
+                    <div class="hotline__phone">
+                        <a href="">0934.45.45.56<span>(TP.HCM - Vũng Tàu)</span></a>
+                        <a href="">0902.34.34.99<span>(Hà Nội - Đà Nẵng)</span></a>
+                    </div>  
+                </div>
+                <div class="header__worktime">
+                    <p>Thời gian làm việc: <b>09:00 - 20:00</b></p>
+                </div>      
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="header__logo header_background">
+                <img src="../../assets/images/logo.png" alt="Logo">
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="header__right">
+                <div class="header__language dropdown">
+                    <a class="btn dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <img src="../../assets/images/lang-vi.png"> 
+                        <span>Vietnamese</span>
+                      </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">
+                            <img src="../../assets/images/lang-en.png"> 
+                            <span>English</span>
+                        </a></li>
+                      </ul>
+                </div>
+                <div class="header__socialmedia">
+                    
+                </div>
+                <div class="header__smallnav">
+        
+                </div>  
+            </div>
+        </div>
+    </div>
+</div>
