FAM-04 update styles in header

--- a/pages/default-modules/header.html
+++ b/pages/default-modules/header.html
@@ -1,27 +1,30 @@
 <div class="container">
     <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-3">
             <div class="header__left" >
                 <div class="header__hotline">
                     <div class="hotline__icon">
                         <img src="../../assets/images/phone-border.png" alt="hotline">
                     </div>
                     <div class="hotline__phone">
-                        <a href="">0934.45.45.56<span>(TP.HCM - Vũng Tàu)</span></a>
-                        <a href="">0902.34.34.99<span>(Hà Nội - Đà Nẵng)</span></a>
+                        <a href="">0934.45.45.56 <span>(TP.HCM - Vũng Tàu)</span></a>
+                        <a href="">0902.34.34.99 <span>(Hà Nội - Đà Nẵng)</span></a>
                     </div>  
                 </div>
                 <div class="header__worktime">
-                    <p>Thời gian làm việc: <b>09:00 - 20:00</b></p>
+                    <i class="fa-sharp fa-regular fa-clock"></i>
+                    <p>Thời gian làm việc: <span>09:00 - 20:00</span></p>
                 </div>      
             </div>
         </div>
-        <div class="col-lg-4">
-            <div class="header__logo header_background">
-                <img src="../../assets/images/logo.png" alt="Logo">
+        <div class="col-lg-6">
+            <div class="header_background">
+                <div class="header__logo">
+                    <img src="../../assets/images/logo.png" alt="Logo">
+                </div>
             </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-3">
             <div class="header__right">
                 <div class="header__language dropdown">
                     <a class="btn dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -36,10 +39,18 @@
                       </ul>
                 </div>
                 <div class="header__socialmedia">
-                    
+                    <i class="fa-solid fa-phone"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                    <i class="fa-brands fa-twitter"></i>
                 </div>
                 <div class="header__smallnav">
-        
+                    <ul>
+                        <li>Tin tức</li>
+                        <li>Hoạt động</li>
+                        <li>Site map</li>
+                    </ul>
                 </div>  
             </div>
         </div>
