FAM-07 add layout for smartchoice section

--- a/pages/home.html
+++ b/pages/home.html
@@ -16,6 +16,7 @@
           $("#header").load("./default-modules/header.html");
           $("#navigation").load("./default-modules/navigation.html");
           $("#banner").load("./home/banner.html");
+          $("#smartchoice").load("./home/smartchoice.html");
         });
         </script>  
 </head>
@@ -28,6 +29,9 @@
     </nav>
     <section>
          <div id="banner" class="banner"></div>
+    </section>
+    <section>
+        <div id="smartchoice" class="smartchoice"></div>
     </section>
         
     <script src="../modules/bootstrap-5.3.0/js/bootstrap.min.js"></script>
