FAM-08 add styles in smartchoice section

--- a/pages/home/smartchoice.html
+++ b/pages/home/smartchoice.html
@@ -4,57 +4,63 @@
         <h4>Sự lựa chọn thông minh của phái đẹp</h4>
     </div>
     <div class="smartchoice__content">
-        <div class="row">
+        <div class="row justify-content-center align-items-center">
             <div class="col-lg-3">
-                <div class="smartchoice_single">
+                <div class="smartchoice__single">
+                    <div class="smartchoice__image">
+                        <img src="../../assets/images/smartchoice/ico-about-1.png" alt="history">
+                    </div>
                     <div class="smartchoice__heading">
-                        <i class="fa-sharp fa-solid fa-clock-rotate-left"></i>
                         <h3>lịch sử</h3>
                     </div>
                     <div class="smartchoice__detail">
                         <p>Thành lập năm 2001 lần đầu tiên người tiêu dùng Việt Nam được tiếp cận mô hình làm đẹp tiên tiến, kết hợp giữa thẩm mỹ và y tế.</p>
                     </div>
                     <div class="smartchoice__button">
-                        <button>
-                            xem chi tiết
+                        <a>
+                            <p>Xem chi tiết</p>
                             <i class="fa-sharp fa-solid fa-arrow-right"></i>
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
 
             <div class="col-lg-3">
-                <div class="smartchoice_single">
+                <div class="smartchoice__single">
+                    <div class="smartchoice__image">
+                        <img src="../../assets/images/smartchoice/ico-about-2.png" alt="discount">
+                    </div>
                     <div class="smartchoice__heading">
-                        <i class="fa-solid fa-bullhorn"></i>
                         <h3>ưu đãi</h3>
                     </div>
                     <div class="smartchoice__detail">
                         <p>Đăng ký để nhận ngay ưu đã đặc biệt trong tháng.</p>
                     </div>
                     <div class="smartchoice__button">
-                        <button>
-                            xem chi tiết
+                        <a>
+                            <p>Xem chi tiết</p>
                             <i class="fa-sharp fa-solid fa-arrow-right"></i>
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
 
             <div class="col-lg-3">
-                <div class="smartchoice_single">
+                <div class="smartchoice__single">
+                    <div class="smartchoice__image">
+                        <img src="../../assets/images/smartchoice/ico-about-3.png" alt="book in advanced">
+                    </div>
                     <div class="smartchoice__heading">
-                        <i class="fa-solid fa-calendar-days"></i>
                         <h3>đặt lịch</h3>
                     </div>
                     <div class="smartchoice__detail">
                         <p>Đăng ký và hoàn thành form đăng ký để được đặt lịch và thăm khám sớm nhất.</p>
                     </div>
                     <div class="smartchoice__button">
-                        <button>
-                            đặt lịch ngay
+                        <a>
+                            <p>Đặt lịch ngay</p>
                             <i class="fa-sharp fa-solid fa-arrow-right"></i>
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
