--- a/pages/home.html
+++ b/pages/home.html
@@ -17,6 +17,7 @@
           $("#navigation").load("./default-modules/navigation.html");
           $("#banner").load("./home/banner.html");
           $("#smartchoice").load("./home/smartchoice.html");
+          $("#philosophy").load("./home/philosophy.html");
         });
         </script>  
 </head>
@@ -33,8 +34,12 @@
     <section>
         <div id="smartchoice" class="smartchoice"></div>
     </section>
+    <section>
+        <div id="philosophy" class="philosophy"></div>
+    </section>
         
     <script src="../modules/bootstrap-5.3.0/js/bootstrap.min.js"></script>
     <script src="../modules/bootstrap-5.3.0/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/home.js"></script>
 </body>
 </html>
