FAM-09 add styles in philosophy section

--- a/pages/home/philosophy.html
+++ b/pages/home/philosophy.html
@@ -4,10 +4,11 @@
     </div>
     <div class="container">
         <div class="philosophy__container">
+
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="philosophy__image">
-                        <img src="../../assets/images/philosophy/center_image.jpg" alt="philosophy">
+                    <div class="philosophy__picture">
+                        <img src="../../assets/images/philosophy/center_image.jpg" alt="philosophy" class="img-responsive">
                     </div>
                 </div>
     
@@ -17,7 +18,7 @@
                             <h3>Triết lý trị liệu</h3>
                         </div>
                         <div class="philosophy__image">
-                            <div id="icon1" class="image__icon" onmouseover="showContent(1)">                    
+                            <div id="icon1" class="image__icon " onmouseover="showContent(1)">                    
                                     <img src="../../assets/images/philosophy/ico-prl-1.png" alt="" >                   
                             </div>
                             <div id="icon2" class="image__icon" onmouseover="showContent(2)">                   
@@ -60,6 +61,6 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>        
     </div>
 </div>
