FAM-10 add layout for skinreborn section

--- a/pages/home.html
+++ b/pages/home.html
@@ -18,6 +18,7 @@
           $("#banner").load("./home/banner.html");
           $("#smartchoice").load("./home/smartchoice.html");
           $("#philosophy").load("./home/philosophy.html");
+          $("#skinreborn").load("./home/skinreborn.html");
         });
         </script>  
 </head>
@@ -37,7 +38,10 @@
     <section>
         <div id="philosophy" class="philosophy"></div>
     </section>
-        
+    <section>
+        <div id="skinreborn" class="skinreborn"></div>
+    </section>
+
     <script src="../modules/bootstrap-5.3.0/js/bootstrap.min.js"></script>
     <script src="../modules/bootstrap-5.3.0/js/bootstrap.bundle.min.js"></script>
     <script src="../js/home.js"></script>
