FAM-11 add styles and animation in skinreborn section

--- a/pages/home/skinreborn.html
+++ b/pages/home/skinreborn.html
@@ -5,7 +5,7 @@
                 <div class="col-lg-6">
                     <div class="skinreborn__step">
                         <div class="skinreborn__image">
-                            <img src="../../assets/images/skinreborn/img-skinrebon.png" alt="skin reborn">
+                            <img src="../../assets/images/skinreborn/img-skinrebon.png" alt="skin reborn" class="img-responsive">
                         </div>
                         <ul>
                             <li>Đột phá điều trị 1 lần duy nhất</li>
@@ -16,127 +16,132 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="skinreborn__map">
-                        <div class="skinreborn__heading">
                             <div class="heading__content">
                                 <h5>Skin reborn</h5>
                                 <h3>blemish</h3>
+                                <div class="hidden__content">
+                                    <h5>Skin reborn</h5>
+                                    <h3>blemish</h3>
+                                    <p>What would you do if you could achieve the benefits of a professional skin care treatment at home for a fraction of the cost of a visit to the</p>
+                                    <a> 
+                                        <p>Xem chi tiết</p>
+                                        <i class="fa-sharp fa-solid fa-arrow-right"></i>
+                                    </a>
+                                </div>
                             </div>
                             <div class="heading__content">
                                 <h5>Skin reborn</h5>
                                 <h3>acne</h3>
+                                <div class="hidden__content">
+                                    <h5>Skin reborn</h5>
+                                    <h3>acne</h3>
+                                    <p>What would you do if you could achieve the benefits of a professional skin care treatment at home for a fraction of the cost of a visit to the</p>
+                                    <a> 
+                                        <p>Xem chi tiết</p>
+                                        <i class="fa-sharp fa-solid fa-arrow-right"></i>
+                                    </a>
+                                </div>
                             </div>
                             <div class="heading__content">
                                 <h5>Skin reborn</h5>
                                 <h3>luster</h3>
+                                <div class="hidden__content">
+                                    <h5>Skin reborn</h5>
+                                    <h3>luster</h3>
+                                    <p>What would you do if you could achieve the benefits of a professional skin care treatment at home for a fraction of the cost of a visit to the</p>
+                                    <a> 
+                                        <p>Xem chi tiết</p>
+                                        <i class="fa-sharp fa-solid fa-arrow-right"></i>
+                                    </a>
+                                </div>                                   
                             </div>
                             <div class="heading__content">
                                 <h5>Skin reborn</h5>
                                 <h3>melasma</h3>
+                                <div class="hidden__content">
+                                    <h5>Skin reborn</h5>
+                                    <h3>melasma</h3>
+                                    <p>What would you do if you could achieve the benefits of a professional skin care treatment at home for a fraction of the cost of a visit to the</p>
+                                    <a> 
+                                        <p>Xem chi tiết</p>
+                                        <i class="fa-sharp fa-solid fa-arrow-right"></i>
+                                    </a>
+                                </div>
                             </div>
                             <div class="heading__content">
                                 <h5>Skin reborn</h5>
                                 <h3>freckles</h3>
+                                <div class="hidden__content">
+                                    <h5>Skin reborn</h5>
+                                    <h3>freckles</h3>
+                                    <p>What would you do if you could achieve the benefits of a professional skin care treatment at home for a fraction of the cost of a visit to the</p>
+                                    <a> 
+                                        <p>Xem chi tiết</p>
+                                        <i class="fa-sharp fa-solid fa-arrow-right"></i>
+                                    </a>
+                                </div>
                             </div>
                             <div class="heading__content">
                                 <h5>Skin reborn</h5>
                                 <h3>youth</h3>
+                                <div class="hidden__content">
+                                    <h5>Skin reborn</h5>
+                                    <h3>youth</h3>
+                                    <p>What would you do if you could achieve the benefits of a professional skin care treatment at home for a fraction of the cost of a visit to the</p>
+                                    <a> 
+                                        <p>Xem chi tiết</p>
+                                        <i class="fa-sharp fa-solid fa-arrow-right"></i>
+                                    </a>
+                                </div>
                             </div>
                             <div class="heading__content">
                                 <h5>Skin reborn</h5>
                                 <h3>smooth</h3>
+                                <div class="hidden__content">
+                                    <h5>Skin reborn</h5>
+                                    <h3>smooth</h3>
+                                    <p>What would you do if you could achieve the benefits of a professional skin care treatment at home for a fraction of the cost of a visit to the</p>
+                                    <a> 
+                                        <p>Xem chi tiết</p>
+                                        <i class="fa-sharp fa-solid fa-arrow-right"></i>
+                                    </a>
+                                </div>
                             </div>
                             <div class="heading__content">
                                 <h5>Skin reborn</h5>
                                 <h3>heal</h3>
+                                <div class="hidden__content">
+                                    <h5>Skin reborn</h5>
+                                    <h3>heal</h3>
+                                    <p>What would you do if you could achieve the benefits of a professional skin care treatment at home for a fraction of the cost of a visit to the</p>
+                                    <a> 
+                                        <p>Xem chi tiết</p>
+                                        <i class="fa-sharp fa-solid fa-arrow-right"></i>
+                                    </a>
+                                </div>
                             </div>
                             <div class="heading__content">
                                 <h5>Skin reborn</h5>
                                 <h3>flesh</h3>
-                            </div>
-                        </div>
-                        <div class="skinreborn__text">
-                            <div class="text__content">
+                                <div class="hidden__content">
+                                    <h5>Skin reborn</h5>
+                                    <h3>flesh</h3>
+                                    <p>What would you do if you could achieve the benefits of a professional skin care treatment at home for a fraction of the cost of a visit to the</p>
+                                    <a> 
+                                        <p>Xem chi tiết</p>
+                                        <i class="fa-sharp fa-solid fa-arrow-right"></i>
+                                    </a>
+                                </div>
+                            </div>  
+                            <div class="skinreborn_text_replace">
                                 <h5>Skin reborn</h5>
-                                <h3>blemish</h3>
-                                <p>What would you do if you could achieve the benefits of a professional skin care treatment at home for a fraction of the cost of a visit to the</p>
-                                <a> 
-                                    <p>Xem chi tiết</p>
-                                    <i class="fa-sharp fa-solid fa-arrow-right"></i>
-                                </a>
-                            </div>
-                            <div class="text__content">
-                                <h5>Skin reborn</h5>
-                                <h3>acne</h3>
-                                <p>What would you do if you could achieve the benefits of a professional skin care treatment at home for a fraction of the cost of a visit to the</p>
-                                <a> 
-                                    <p>Xem chi tiết</p>
-                                    <i class="fa-sharp fa-solid fa-arrow-right"></i>
-                                </a>
-                            </div>
-                            <div class="text__content">
-                                <h5>Skin reborn</h5>
-                                <h3>luster</h3>
-                                <p>What would you do if you could achieve the benefits of a professional skin care treatment at home for a fraction of the cost of a visit to the</p>
-                                <a> 
-                                    <p>Xem chi tiết</p>
-                                    <i class="fa-sharp fa-solid fa-arrow-right"></i>
-                                </a>
-                            </div>
-                            <div class="text__content">
-                                <h5>Skin reborn</h5>
-                                <h3>melasma</h3>
-                                <p>What would you do if you could achieve the benefits of a professional skin care treatment at home for a fraction of the cost of a visit to the</p>
-                                <a> 
-                                    <p>Xem chi tiết</p>
-                                    <i class="fa-sharp fa-solid fa-arrow-right"></i>
-                                </a>
-                            </div>
-                            <div class="text__content">
-                                <h5>Skin reborn</h5>
-                                <h3>freckles</h3>
-                                <p>What would you do if you could achieve the benefits of a professional skin care treatment at home for a fraction of the cost of a visit to the</p>
-                                <a> 
-                                    <p>Xem chi tiết</p>
-                                    <i class="fa-sharp fa-solid fa-arrow-right"></i>
-                                </a>
-                            </div>
-                            <div class="text__content">
-                                <h5>Skin reborn</h5>
-                                <h3>youth</h3>
-                                <p>What would you do if you could achieve the benefits of a professional skin care treatment at home for a fraction of the cost of a visit to the</p>
-                                <a> 
-                                    <p>Xem chi tiết</p>
-                                    <i class="fa-sharp fa-solid fa-arrow-right"></i>
-                                </a>
-                            </div>
-                            <div class="text__content">
-                                <h5>Skin reborn</h5>
-                                <h3>smooth</h3>
-                                <p>What would you do if you could achieve the benefits of a professional skin care treatment at home for a fraction of the cost of a visit to the</p>
-                                <a> 
-                                    <p>Xem chi tiết</p>
-                                    <i class="fa-sharp fa-solid fa-arrow-right"></i>
-                                </a>
-                            </div>
-                            <div class="text__content">
-                                <h5>Skin reborn</h5>
-                                <h3>heal</h3>
-                                <p>What would you do if you could achieve the benefits of a professional skin care treatment at home for a fraction of the cost of a visit to the</p>
-                                <a> 
-                                    <p>Xem chi tiết</p>
-                                    <i class="fa-sharp fa-solid fa-arrow-right"></i>
-                                </a>
-                            </div>
-                            <div class="text__content">
-                                <h5>Skin reborn</h5>
-                                <h3>flesh</h3>
-                                <p>What would you do if you could achieve the benefits of a professional skin care treatment at home for a fraction of the cost of a visit to the</p>
-                                <a> 
-                                    <p>Xem chi tiết</p>
-                                    <i class="fa-sharp fa-solid fa-arrow-right"></i>
-                                </a>
-                            </div>
-                        </div>
+                                    <h3>blemish</h3>
+                                    <p>What would you do if you could achieve the benefits of a professional skin care treatment at home for a fraction of the cost of a visit to the</p>
+                                    <a> 
+                                        <p>Xem chi tiết</p>
+                                        <i class="fa-sharp fa-solid fa-arrow-right"></i>
+                                    </a>
+                            </div>      
                     </div>
                 </div>
                 <div class="col-lg-12">
