FAM-12 update styles and script in philosophy section

--- a/pages/home/philosophy.html
+++ b/pages/home/philosophy.html
@@ -18,45 +18,48 @@
                             <h3>Triết lý trị liệu</h3>
                         </div>
                         <div class="philosophy__image">
-                            <div id="icon1" class="image__icon " onmouseover="showContent(1)">                    
-                                    <img src="../../assets/images/philosophy/ico-prl-1.png" alt="" >                   
+                            <div class="image__icon">                    
+                                    <img src="../../assets/images/philosophy/ico-prl-1.png" alt="" >
+                                    <div class="image__content">
+                                        <h3>Điều trị tuỳ chỉnh theo làn da, nhu cầu của khách hàng 1</h3>
+                                        <p>Skin Reborn được mệnh danh là khắc tinh của nám, nếp nhăn, sẹo cũng như quá trình lão hóa da. Liệu trình điều trị của công thức này vô cùng đơn giản và nhanh chóng nhưng mang lại hiệu quả rõ ràng và khác biệt. Rất nhanh, sau khi được các bác sĩ tư vấn, người sử dụng Skin Reborn chỉ cần điều trị 1 lần và trong vòng 7 ngày sẽ thấy rõ hiệu quả phục hồi trên da khoảng 80-90%...</p>
+                                    </div>                   
                             </div>
-                            <div id="icon2" class="image__icon" onmouseover="showContent(2)">                   
-                                    <img src="../../assets/images/philosophy/ico-prl-2.png" alt="" >                   
+                            <div class="image__icon">                   
+                                    <img src="../../assets/images/philosophy/ico-prl-2.png" alt="" >
+                                    <div class="image__content">
+                                        <h3>Điều trị tuỳ chỉnh theo làn da, nhu cầu của khách hàng 2</h3>
+                                        <p>Skin Reborn được mệnh danh là khắc tinh của nám, nếp nhăn, sẹo cũng như quá trình lão hóa da. Liệu trình điều trị của công thức này vô cùng đơn giản và nhanh chóng nhưng mang lại hiệu quả rõ ràng và khác biệt. Rất nhanh, sau khi được các bác sĩ tư vấn, người sử dụng Skin Reborn chỉ cần điều trị 1 lần và trong vòng 7 ngày sẽ thấy rõ hiệu quả phục hồi trên da khoảng 80-90%...</p>
+                                    </div>                   
                             </div>
-                            <div id="icon3" class="image__icon" onmouseover="showContent(3)">                   
-                                    <img src="../../assets/images/philosophy/ico-prl-3.png" alt="" >                  
+                            <div class="image__icon">                   
+                                    <img src="../../assets/images/philosophy/ico-prl-3.png" alt="" >                                            
+                                    <div class="image__content">
+                                        <h3>Điều trị tuỳ chỉnh theo làn da, nhu cầu của khách hàng 3</h3>
+                                        <p>Skin Reborn được mệnh danh là khắc tinh của nám, nếp nhăn, sẹo cũng như quá trình lão hóa da. Liệu trình điều trị của công thức này vô cùng đơn giản và nhanh chóng nhưng mang lại hiệu quả rõ ràng và khác biệt. Rất nhanh, sau khi được các bác sĩ tư vấn, người sử dụng Skin Reborn chỉ cần điều trị 1 lần và trong vòng 7 ngày sẽ thấy rõ hiệu quả phục hồi trên da khoảng 80-90%...</p>
+                                    </div>                  
                              </div>
-                            <div id="icon4" class="image__icon" onmouseover="showContent(4)">                   
-                                    <img src="../../assets/images/philosophy/ico-prl-4.png" alt="" >                   
+                            <div class="image__icon">                   
+                                    <img src="../../assets/images/philosophy/ico-prl-4.png" alt="" >
+                                    <div class="image__content">
+                                        <h3>Điều trị tuỳ chỉnh theo làn da, nhu cầu của khách hàng 4</h3>
+                                        <p>Skin Reborn được mệnh danh là khắc tinh của nám, nếp nhăn, sẹo cũng như quá trình lão hóa da. Liệu trình điều trị của công thức này vô cùng đơn giản và nhanh chóng nhưng mang lại hiệu quả rõ ràng và khác biệt. Rất nhanh, sau khi được các bác sĩ tư vấn, người sử dụng Skin Reborn chỉ cần điều trị 1 lần và trong vòng 7 ngày sẽ thấy rõ hiệu quả phục hồi trên da khoảng 80-90%...</p>
+                                    </div>                   
                             </div>
-                            <div id="icon5" class="image__icon" onmouseover="showContent(5)">                  
+                            <div class="image__icon">                  
                                     <img src="../../assets/images/philosophy/ico-prl-5.png" alt="" >
+                                    <div class="image__content">
+                                        <h3>Điều trị tuỳ chỉnh theo làn da, nhu cầu của khách hàng 5</h3>
+                                        <p>Skin Reborn được mệnh danh là khắc tinh của nám, nếp nhăn, sẹo cũng như quá trình lão hóa da. Liệu trình điều trị của công thức này vô cùng đơn giản và nhanh chóng nhưng mang lại hiệu quả rõ ràng và khác biệt. Rất nhanh, sau khi được các bác sĩ tư vấn, người sử dụng Skin Reborn chỉ cần điều trị 1 lần và trong vòng 7 ngày sẽ thấy rõ hiệu quả phục hồi trên da khoảng 80-90%...</p>
+                                    </div>
                             </div>
                            
                         </div>
                         <div class="philosophy__detail">
-                            <div class="image__content" id="content1">
+                            <div class="image__content-replace">
                                 <h3>Điều trị tuỳ chỉnh theo làn da, nhu cầu của khách hàng 1</h3>
                                 <p>Skin Reborn được mệnh danh là khắc tinh của nám, nếp nhăn, sẹo cũng như quá trình lão hóa da. Liệu trình điều trị của công thức này vô cùng đơn giản và nhanh chóng nhưng mang lại hiệu quả rõ ràng và khác biệt. Rất nhanh, sau khi được các bác sĩ tư vấn, người sử dụng Skin Reborn chỉ cần điều trị 1 lần và trong vòng 7 ngày sẽ thấy rõ hiệu quả phục hồi trên da khoảng 80-90%...</p>
                             </div>
-                            <div class="image__content" id="content2">
-                                <h3>Điều trị tuỳ chỉnh theo làn da, nhu cầu của khách hàng 2</h3>
-                                <p>Skin Reborn được mệnh danh là khắc tinh của nám, nếp nhăn, sẹo cũng như quá trình lão hóa da. Liệu trình điều trị của công thức này vô cùng đơn giản và nhanh chóng nhưng mang lại hiệu quả rõ ràng và khác biệt. Rất nhanh, sau khi được các bác sĩ tư vấn, người sử dụng Skin Reborn chỉ cần điều trị 1 lần và trong vòng 7 ngày sẽ thấy rõ hiệu quả phục hồi trên da khoảng 80-90%...</p>
-                            </div>
-                            <div class="image__content" id="content3">
-                                <h3>Điều trị tuỳ chỉnh theo làn da, nhu cầu của khách hàng 3</h3>
-                                <p>Skin Reborn được mệnh danh là khắc tinh của nám, nếp nhăn, sẹo cũng như quá trình lão hóa da. Liệu trình điều trị của công thức này vô cùng đơn giản và nhanh chóng nhưng mang lại hiệu quả rõ ràng và khác biệt. Rất nhanh, sau khi được các bác sĩ tư vấn, người sử dụng Skin Reborn chỉ cần điều trị 1 lần và trong vòng 7 ngày sẽ thấy rõ hiệu quả phục hồi trên da khoảng 80-90%...</p>
-                            </div>
-                            <div class="image__content" id="content4">
-                                <h3>Điều trị tuỳ chỉnh theo làn da, nhu cầu của khách hàng 4</h3>
-                                <p>Skin Reborn được mệnh danh là khắc tinh của nám, nếp nhăn, sẹo cũng như quá trình lão hóa da. Liệu trình điều trị của công thức này vô cùng đơn giản và nhanh chóng nhưng mang lại hiệu quả rõ ràng và khác biệt. Rất nhanh, sau khi được các bác sĩ tư vấn, người sử dụng Skin Reborn chỉ cần điều trị 1 lần và trong vòng 7 ngày sẽ thấy rõ hiệu quả phục hồi trên da khoảng 80-90%...</p>
-                            </div>
-                            <div class="image__content" id="content5">
-                                <h3>Điều trị tuỳ chỉnh theo làn da, nhu cầu của khách hàng 5</h3>
-                                <p>Skin Reborn được mệnh danh là khắc tinh của nám, nếp nhăn, sẹo cũng như quá trình lão hóa da. Liệu trình điều trị của công thức này vô cùng đơn giản và nhanh chóng nhưng mang lại hiệu quả rõ ràng và khác biệt. Rất nhanh, sau khi được các bác sĩ tư vấn, người sử dụng Skin Reborn chỉ cần điều trị 1 lần và trong vòng 7 ngày sẽ thấy rõ hiệu quả phục hồi trên da khoảng 80-90%...</p>
-                            </div>
-                            
                         </div>
                     </div>
                 </div>
