FAM-13 add layout for gallery section

--- a/pages/home.html
+++ b/pages/home.html
@@ -19,6 +19,7 @@
           $("#smartchoice").load("./home/smartchoice.html");
           $("#philosophy").load("./home/philosophy.html");
           $("#skinreborn").load("./home/skinreborn.html");
+          $("#gallery").load("./home/gallery.html");
         });
     </script>  
 </head>
@@ -41,7 +42,9 @@
     <section>
         <div id="skinreborn" class="skinreborn"></div>
     </section>
-   
+    <section>
+        <div id="gallery" class="gallery"></div>
+    </section>
     <script src="../modules/bootstrap-5.3.0/js/bootstrap.min.js"></script>
     <script src="../modules/bootstrap-5.3.0/js/bootstrap.bundle.min.js"></script>
     <script src="../js/home.js"></script>
