FAM-14 add layout for story section

--- a/pages/home.html
+++ b/pages/home.html
@@ -20,6 +20,7 @@
           $("#philosophy").load("./home/philosophy.html");
           $("#skinreborn").load("./home/skinreborn.html");
           $("#gallery").load("./home/gallery.html");
+          $("#story").load("./home/story.html");
         });
     </script>  
 </head>
@@ -44,6 +45,9 @@
     </section>
     <section>
         <div id="gallery" class="gallery"></div>
+    </section>
+    <section>
+        <div id="story" class="story"></div>
     </section>
     <script src="../modules/bootstrap-5.3.0/js/bootstrap.min.js"></script>
     <script src="../modules/bootstrap-5.3.0/js/bootstrap.bundle.min.js"></script>
