--- a/pages/test.html
+++ b/pages/test.html
@@ -1,54 +1,71 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <title>Pure JavaScript Example</title>
-    <style>
-        /* Initially hide the hidden content */
-        .hidden__content {
-            display: none;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bootstrap Slider Example</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
+
 <body>
-    <div class="skinreborn__map">
-        <div class="heading__content">
-            <h1>Content 1</h1>
-            <p>Heading Content 1</p>
-            <div class="hidden__content">
-                <h1>Heading 1</h1>
-                <p>This is the hidden content for heading 1.</p>
-                <a>Link 1</a>
+    <div class="container">
+        <div id="carouselExample" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExample" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExample" data-slide-to="1"></li>
+                <li data-target="#carouselExample" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="https://via.placeholder.com/800x400?text=Image+1" class="d-block w-100" alt="Image 1">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://via.placeholder.com/800x400?text=Image+2" class="d-block w-100" alt="Image 2">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://via.placeholder.com/800x400?text=Image+3" class="d-block w-100" alt="Image 3">
+                </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExample" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
-        <div class="heading__content">
-            <h1>Content 2</h1>
-            <p>Heading Content 2</p>
-            <div class="hidden__content">
-                <h1>Heading 2</h1>
-                <p>This is the hidden content for heading 2.</p>
-                <a>Link 2</a>
-            </div>
-        </div>
-        <!-- Add more heading__content elements if needed -->
-        <div class="skinreborn_text_replace"></div>
+        
     </div>
 
+    <!-- Bootstrap JS (Optional if you already have it) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            var headingContent = document.querySelectorAll('.skinreborn__map .heading__content');
-            var textContent = document.querySelector('.skinreborn__map .skinreborn_text_replace');
-            console.log(headingContent);
-            headingContent.forEach(function (element) {
-                var hiddenContent = element.querySelector('.hidden__content');
+        // JavaScript to handle Next and Previous buttons
+        $(document).ready(function () {
+            var contentItems = $(".content");
+            var currentIndex = 0;
 
-                element.addEventListener("mouseenter", function () {
-                    var textHtml = hiddenContent.innerHTML;
-                    textContent.innerHTML = textHtml; // Show the hidden content in text__content
-                });
+            function showContent(index) {
+                contentItems.removeClass("active");
+                $(contentItems[index]).addClass("active");
+            }
 
-                
+            $(".prev-btn").click(function () {
+                currentIndex = (currentIndex - 1 + contentItems.length) % contentItems.length;
+                showContent(currentIndex);
+            });
+
+            $(".next-btn").click(function () {
+                currentIndex = (currentIndex + 1) % contentItems.length;
+                showContent(currentIndex);
             });
         });
     </script>
 </body>
+
 </html>
